# simple-clipboard-manager

./: CMakeLists.txt  Makefile  README.md  clip.c  clip.h  main.c  meson.build
src/: clip.c  clip.h  main.c
tests/: Makefile  clip_test.c
